[workspace]
resolver = "2"

members = [
    "crates/sui-indexer",
    "crates/token-worker"
]

[workspace.package]
version = "1.0.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, sui binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

[workspace.dependencies]
tokio = "1.27.0"