[workspace]
resolver = "2"

members = [
    "crates/sui-indexer",
    "crates/token-worker"
]

[workspace.package]
version = "1.0.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, sui binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

[workspace.dependencies]
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.23"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
anyhow = { version = "1.0.64", features = ["backtrace"] }