[package]
name = "sui-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sui-indexer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
diesel = { version = "2.0.0", features = ["postgres"] }
futures = "0.3.23"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
anyhow = { version = "1.0.64", features = ["backtrace"] }
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "ae1212" }
tracing = "0.1"
tracing-subscriber = "0.2.0"
chrono = "0.4.24"
redis = { version = "0.23.0", features = ["tokio-comp"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
structopt = "0.3.26"

rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_s3 = "0.48.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
reqwest = "0.11.17"
bytes = "1.4.0"
image = "0.24.6"
mime_guess = "2.0.4"
blake3 = "1.3.3"
lapin = "2.1.1"

