[package]
name = "sui-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sui-indexer"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
diesel = { version = "2.0.3", features = ["postgres","r2d2"] }
diesel-async = { version = "0.2.1",features = ["postgres"]}
diesel-derive-enum = { version = "^2.0.1", features = ["postgres"] }
futures = {workspace=true}
serde = { workspace=true}
serde_json = {workspace =true}
anyhow = {workspace=true}
lapin = {workspace=true}
sui-sdk = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
chrono = {workspace=true}
redis = { version = "0.23.0", features = ["tokio-comp"] }
structopt = "0.3.26"
flume = "0.10.14"
dotenv = "0.15.0"

