[package]
name = "token-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sui-token-worker"
path = "src/main.rs"

[dependencies]
tokio = {workspace=true}
futures = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
anyhow = {workspace=true}


diesel = { version = "2.0.3", features = ["postgres","r2d2"] }
diesel-async = { version = "0.2.1",features = ["postgres"]}
diesel-derive-enum = { version = "^2.0.1", features = ["postgres"] }
lapin = "2.1.1"


tracing = "0.1"
tracing-subscriber = "0.2.0"
chrono = "0.4.24"
rusoto_core = { version="0.48.0", default_features=false, features=["rustls"] }
rusoto_sqs = { version="0.48.0", default_features=false, features=["rustls"] }
rusoto_s3 = { version="0.48.0", default_features=false, features=["rustls"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
reqwest = "0.11.17"
bytes = "1.4.0"
image = "0.24.6"
mime_guess = "2.0.4"
blake3 = "1.3.3"
sui-indexer = { path = "../sui-indexer" }
redis = { version = "0.23.0", features = ["tokio-comp"] }
algoliasearch = "0.1.6"
